--- a/src/Styles/InfPatContent.module.css
+++ b/src/Styles/InfPatContent.module.css
@@ -2,7 +2,7 @@
   display: flex;
   width: 100%;
   max-width: 1200px;
-  margin: 57rem auto ;
+  margin: 57rem auto 8rem;
   background: linear-gradient(135deg, #2c2c2c 0%, #1a1a1a 100%);
   border-radius: 12px;
   overflow: hidden;
