--- a/src/Styles/DivLine.module.css
+++ b/src/Styles/DivLine.module.css
@@ -51,7 +51,7 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.1rem;
   font-weight: 600;
-  color: white;
+  color: rgb(213, 110, 14);
   margin: 0 2rem;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
   display: flex;
